--- a/csharp-aoc/Aoc2020/Aoc2020.csproj
+++ b/csharp-aoc/Aoc2020/Aoc2020.csproj
@@ -26,6 +26,9 @@
     <None Update="input_2020_day_13.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="input_2020_day_14.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="input_2020_day_8.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
