--- a/csharp-aoc/Aoc2017/Aoc2017.csproj
+++ b/csharp-aoc/Aoc2017/Aoc2017.csproj
@@ -12,6 +12,9 @@
     <None Update="input_day_10.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="input_day_11.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
