Aoc 2023 day 7 both parts
Fun day! Much like Rock-Paper-Scissors from 2022.

--- a/csharp-aoc/Aoc2023/Aoc2023.csproj
+++ b/csharp-aoc/Aoc2023/Aoc2023.csproj
@@ -26,6 +26,9 @@
     <None Update="input_day_5.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="input_day_7.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
