--- a/csharp-aoc/Aoc2023/Aoc2023.csproj
+++ b/csharp-aoc/Aoc2023/Aoc2023.csproj
@@ -29,6 +29,12 @@
     <None Update="input_day_7.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="test_input_day_8.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="input_day_8.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
