--- a/csharp-aoc/Aoc2024/Aoc2024.csproj
+++ b/csharp-aoc/Aoc2024/Aoc2024.csproj
@@ -10,6 +10,9 @@
     <None Update="day1_input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="day2_input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
