--- a/csharp-aoc/Aoc2024/Aoc2024.csproj
+++ b/csharp-aoc/Aoc2024/Aoc2024.csproj
@@ -16,6 +16,9 @@
     <None Update="day3_input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="day4_input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
