--- a/csharp-aoc/Aoc2017/Aoc2017.csproj
+++ b/csharp-aoc/Aoc2017/Aoc2017.csproj
@@ -9,10 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Update="input_day_13.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="input_day_12.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="input_day_10.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="input_day_11.txt">
+    <None Update="input_day_12.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
