--- a/csharp-aoc/Aoc2024/Aoc2024.csproj
+++ b/csharp-aoc/Aoc2024/Aoc2024.csproj
@@ -8,6 +8,9 @@
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="9.0.0" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="input\*.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
