--- a/csharp-aoc/Aoc2024/Aoc2024.csproj
+++ b/csharp-aoc/Aoc2024/Aoc2024.csproj
@@ -22,5 +22,8 @@
     <None Update="input\day12_input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="input\day19_input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
