--- a/csharp-aoc/Aoc2018/Aoc2018.csproj
+++ b/csharp-aoc/Aoc2018/Aoc2018.csproj
@@ -11,6 +11,9 @@
     <None Update="day12_input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="day13_input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="input_day_10.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
